src/snapshots/muffy__render__tests__text__render_in_text.snap
---
source: src/render.rs
expression: "str::from_utf8(&string).unwrap()"
---
https://foo.com/
	a 
		ERROR	foo
