src/snapshots/muffy__render__tests__text__render_successful_element.snap
---
source: src/render.rs
expression: "str::from_utf8(&string).unwrap()"
---
https://foo.com/
	a 
		ERROR	validation failed
